<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="tag_line">A conference tailored for Android developers!</string>
    <string name="session_detail">Session Detail</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>

    <string name="speaker">Speaker</string>
    <string name="session_time_range">%1$s - %2$s (%3$smin)</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="slide_and_video">Slide＆Video</string>

    <string name="search_by_category">Search by category</string>
    <string name="search_by_place">Search by place</string>

    <string name="icon">Icon</string>

    <string name="send_feedback">Send feedback</string>

    <string name="all_sessions">All Sessions</string>
    <string name="my_schedule">My Schedule</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="sponsors">Sponsors</string>
    <string name="about">About</string>
    <string name="search">Search</string>

    <string name="sessions_network_error">Failed to load sessions. Try again after a while.</string>

    <string name="map_main_name">Reception, Keynote venue</string>
    <string name="map_main_building">70th Memorial Hall</string>
    <string name="map_ab_name">Room A, B</string>
    <string name="map_ab_building">South 2 bldg.</string>
    <string name="map_cd_name">Room C, D</string>
    <string name="map_cd_building">South 4 bldg.</string>
    <string name="map_party_name">After party venue</string>
    <string name="map_party_building">Tokyo Tech Front (Kuramae Hall)</string>
    <string name="map_address">Tokyo Institute of Technology, Ookayama Campus\nOokayama 2&#8211;12&#8211;1, Meguro City, Tokyo</string>
    <string name="map_fine_location_denied">Consider granting it in order to get the current location.</string>
    <string name="map_fine_location_never_askagain">Dialog never shows again.\nPlease go setting and grant it if you want to.</string>
    <string name="map_fine_location_rationale">Location permissions is needed to show your current position.</string>
    <string name="map_button_allow">Allow</string>
    <string name="map_button_deny">Deny</string>

    <string name="lang_ar_in_ar" translatable="false">العربية</string>
    <string name="lang_en_in_ar" translatable="false">الإنجليزية</string>
    <string name="lang_ja_in_ar" translatable="false">اليابانية</string>
    <string name="lang_ko_in_ar" translatable="false">الكورية</string>

    <string name="lang_ar_in_en" translatable="false">Arabic</string>
    <string name="lang_en_in_en" translatable="false">English</string>
    <string name="lang_ja_in_en" translatable="false">Japanese</string>
    <string name="lang_ko_in_en" translatable="false">Korean</string>

    <string name="lang_ar_in_ja" translatable="false">アラビア語</string>
    <string name="lang_en_in_ja" translatable="false">英語</string>
    <string name="lang_ja_in_ja" translatable="false">日本語</string>
    <string name="lang_ko_in_ja" translatable="false">韓国語</string>

    <string name="lang_ar_in_ko" translatable="false">아라비아어</string>
    <string name="lang_en_in_ko" translatable="false">영어</string>
    <string name="lang_ja_in_ko" translatable="false">일본어</string>
    <string name="lang_ko_in_ko" translatable="false">한국</string>

    <string name="lang_ar">@string/lang_ar_in_en</string>
    <string name="lang_en">@string/lang_en_in_en</string>
    <string name="lang_ja">@string/lang_ja_in_en</string>
    <string name="lang_ko">@string/lang_ko_in_en</string>

    <string name="settings_language">Change language</string>
    <string name="settings_language_description">Choose language in this app. After changed, app will restart.</string>
    <string name="settings_notification_group">Notification</string>
    <string name="settings_notification">Notification</string>
    <string name="settings_notification_description">Choose whether to receive notification in this app.</string>
    <string name="settings_heads_up_notification">Heads-up Notification</string>
    <string name="settings_heads_up_notification_description">Choose whether to use Heads-up Notification.</string>
    <string name="settings_local_time">Show local times</string>
    <string name="settings_local_time_description">Use your local time instead of the conference\’s local time.</string>

    <string name="sponsor_category_platinum">Platinum Sponsors</string>
    <string name="sponsor_category_video">Video Sponsors</string>
    <string name="sponsor_category_food">Food Sponsors</string>
    <string name="sponsor_category_normal">Supporters</string>

    <string name="about_conference">About DroidKaigi</string>
    <string name="about_conference_descriptions">For its 2016 edition, DroidKaigi will be held in two days and expects to see famous engineers from Japan and overseas giving talks.\n\nThere will be corporate exhibitions as well other than conference sessions.\n\nAndroid is being used in various situations and in many ways. Why don\'t you come and join us to share your knowledge and create better software?</string>
    <string name="about_rep">REP: %1$s</string>
    <string name="about_social">Social</string>
    <string name="about_license">License</string>
    <string name="about_youtube">YouTube Channel</string>
    <string name="about_github_repository">GitHub Repository</string>
    <string name="about_contributors">Contributors</string>
    <string name="about_questionnaire">Questionnaire</string>
    <string name="about_version_prefix">"V%1$s</string>

    <string name="contributors_load_error">Failed to load contributors.</string>

    <plurals name="number_with_brackets">
        <item quantity="one">(%1$d person)</item>
        <item quantity="other">(%1$d people)</item>
    </plurals>

    <string name="search_hint">Search by words</string>

    <string name="my_schedule_empty">No items here. Let\'s check out all sessions and put your favourite!</string>
    <string name="my_schedule_go_to_session_list">Go to All Sessions</string>
    <string name="my_schedule_conflicted">Conflicted with another session</string>

    <plurals name="schedule_notification_title">
        <item quantity="one">%1$d minute before session</item>
        <item quantity="other">%1$d minutes before session</item>
    </plurals>

    <string name="session_feedback_accepted_successfully">Thank you! The feedback was accepted.</string>
    <string name="session_feedback_below_expectation">Below</string>
    <string name="session_feedback_beyond_expectation">Beyond</string>
    <string name="session_feedback_difficulty">Was this session easy to understand?</string>
    <string name="session_feedback_easy">Easy</string>
    <string name="session_feedback_expectation_label_text">Based on the description, was the content as expected?</string>
    <string name="session_feedback_extremely_relevant">Extremely</string>
    <string name="session_feedback_hard">Hard</string>
    <string name="session_feedback_knowledgeable">How knowledgeable was the content?</string>
    <string name="session_feedback_not_accepting">Sorry. Currently we are not accepting the feedback. You can submit feedback only during the event dates.</string>
    <string name="session_feedback_not_at_all_relevant">Not at all</string>
    <string name="session_feedback_other">Anything else we should know? (Please don\'t add any personal information in your comments)</string>
    <string name="session_feedback_other_hint">Other session feedback?</string>
    <string name="session_feedback_outstanding_knowledge">Outstanding</string>
    <string name="session_feedback_poor_knowledge">Poor</string>
    <string name="session_feedback_relevance">How relevant was this session to your projects?</string>
    <string name="session_feedback_submit_error">An error occurred while submitting. Make sure the network is available.</string>
    <string name="session_feedback_submit_failure">Submit failed</string>
    <string name="session_feedback_submit_success">Submit succeeded</string>
    <string name="session_feedback_submit_link">Submit Feedback</string>

    <!-- Video -->
    <string name="video">Video</string>
    <string name="video_audio">Audio</string>
    <string name="video_text">Text</string>
    <string name="video_logging">Logging</string>
    <string name="video_retry">Retry</string>
    <string name="video_error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="video_error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="video_error_drm_unknown">An unknown DRM error occurred</string>
    <string name="video_error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="video_error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="video_error_querying_decoders">Unable to query device decoders</string>
    <string name="video_error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="video_storage_permission_denied">Permission to access storage was denied</string>
    <string name="video_enable_background_audio">Play in background</string>
    <string name="video_logging_normal">Normal</string>
    <string name="video_logging_verbose">Verbose</string>
    <string name="video_off">[off]</string>
</resources>
